# runder

./: Cargo.toml  scenes.blend1
src/: app.rs  bindgroup.rs  buffer_info.rs  camera.rs  gltf_helper.rs  graph.rs  lib.rs  main.rs  math.rs  mesh.rs  model_buffer_info.rs  pipeline.rs  primitive.rs  renderer.rs  test.gltf  test.wgsl  uniform_buffer.rs  view.rs
src/gltf/: scenes.gltf
src/math/: mat.rs  transform.rs  vec.rs
