[package]
name = "render"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
getset = "0.1.2"
gltf = "1.4.1"
log = "0.4.21"
pollster = "0.3.0"
wgpu = "0.20.1"
winit = "0.29"

[build]
# use more threads for building
rustflags = ["-Z", "threads=8"]

[profile.dev]
split-debuginfo = "unpacked"